--- a/test/index.html
+++ b/test/index.html
@@ -7,8 +7,10 @@
     <script src="jquery.js"></script>
     <script src="mocha.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="../schema.js"></script>
-    <script src="test.js"></script>
+    <script src="../validate.js"></script>
+    <script src="test.string.js"></script>
+    <script src="test.number.js"></script>
+    <script src="test.array.js"></script>
     <script>onload = mocha.run;</script>
 </head>
 <body>
