--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
 </head>
 <body>
+  <div id="mocha"></div>
+
   <script src="./jquery.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
   <script src="../lib/json-validate.js"></script>
