--- a/test/index.html
+++ b/test/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>json-validate</title>
-  <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
+    <meta charset="utf-8">
+    <title>test</title>
 </head>
 <body>
-  <div id="mocha"></div>
-
-  <script src="./jquery.js"></script>
-  <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="../lib/json-validate.js"></script>
-  <script>onload = mocha.run</script>
+    <script src="../lib/json-validate.js"></script>
 </body>
 </html>
